--- a/index.html
+++ b/index.html
@@ -10,6 +10,61 @@
 <input class='radio' type="radio" name="highlight" data-price="95.9" value="a4">a4
 <input id="price" type="text">
 
+
+
+<tbody>
+    <form>
+        <tr>
+            <th>Upper Section</th>
+            <th>Rule</th>
+            <th>Points</th>
+        </tr>
+        <tr>
+            <td>
+                <div class="radio">
+                    <input type="radio" name="optradio" id="one">
+                </div>
+            </td>
+            <td>
+                <div class="radiotext">
+                    <label>Aces</label>
+                </div>
+            </td>
+            <td>
+                <div class="radiotext">
+                    <label>Sum of ones</label>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="radio">
+                    <input type="radio" name="optradio" id="two">
+                </div>
+            </td>
+            <td>
+                <div class="radiotext">
+                    <label>Twos</label>
+                </div>
+            </td>
+            <td>
+                <div class="radiotext">
+                    <label>Sum of twos</label>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button id="scoreButton" type="button">Score Now</button>
+            </td>
+        </tr>
+    </form>
+</tbody>
+
+
+
+
+	
 <script>
 
 var inputs = document.getElementsByClassName('radio');
