--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World 1113</h1>
+<h1>Hello World 1114</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
-<input class='radio' type="radio" name="highlight" data-price="25.1" value="a1">a1
-<input class='radio' type="radio" name="highlight" data-price="55.4" value="a2">a2
-<input class='radio' type="radio" name="highlight" data-price="65.3" value="a3">a3
-<input class='radio' type="radio" name="highlight" data-price="95.9" value="a4">a4
+<input class='d110' type="radio" name="highlight" data-price="25.1" value="a1">a1
+<input class='d110' type="radio" name="highlight" data-price="55.4" value="a2">a2
+<input class='d110' type="radio" name="highlight" data-price="65.3" value="a3">a3
+<input class='d110' type="radio" name="highlight" data-price="95.9" value="a4">a4
 
 
 
 <br>
 
-<input class='radio' type="radio" name="highlight" data-price="25.1" value="a1">a1
-<input class='radio' type="radio" name="highlight" data-price="55.4" value="a2">a2
-<input class='radio' type="radio" name="highlight" data-price="65.3" value="a3">a3
-<input class='radio' type="radio" name="highlight" data-price="95.9" value="a4">a4
+<input class='d115' type="radio" name="highlight" data-price="25.1" value="a1">a1
+<input class='d115' type="radio" name="highlight" data-price="55.4" value="a2">a2
+<input class='d115' type="radio" name="highlight" data-price="65.3" value="a3">a3
+<input class='d115' type="radio" name="highlight" data-price="95.9" value="a4">a4
 
-	
-<input id="price" type="text">
-
-
+<br>	
+<input id="priced110" type="text">
+<br>
+<input id="priced115" type="text">
+<br>
 
 <tbody>
     <form>
@@ -78,14 +79,23 @@
 	
 <script>
 
-var inputs = document.getElementsByClassName('radio');
-var textbox = document.getElementById('price');
+var inputsd110 = document.getElementsByClassName('d110');
+var inputsd115 = document.getElementsByClassName('d115');	
+	
+var textbox = document.getElementById('price-d110');
 var i
-for (i = 0; i < inputs.length; i++) {
-	inputs[i].onclick = function(){
-  	textbox.value = this.dataset.price;
+for (i = 0; i < inputsd110.length; i++) {
+	inputsd110[i].onclick = function(){
+  	textbox.value = this.dataset.priced110;
   }
 }
+
+for (i = 0; i < inputsd115.length; i++) {
+	inputsd115[i].onclick = function(){
+  	textbox.value = this.dataset.priced115;
+  }
+}
+	
   
 </script>
   
