--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ var textboxd115 = document.getElementById('priced115');
 var i
 for (i = 0; i < inputsd110.length; i++) {
 	inputsd110[i].onclick = function(){
-  	textboxd110.value = this.dataset.priced110;
+  	textboxd110.value = this.dataset.price;
   }
 }
 
 for (i = 0; i < inputsd115.length; i++) {
 	inputsd115[i].onclick = function(){
-  	textboxd115.value = this.dataset.priced115;
+  	textboxd115.value = this.dataset.price;
   }
 }
 	
