--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World 2</h1>
+<h1>Hello World 3</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
-<input class='d110' type="radio" name="highlight" data-price="25.1" value="a1">a1
-<input class='d110' type="radio" name="highlight" data-price="55.4" value="a2">a2
-<input class='d110' type="radio" name="highlight" data-price="65.3" value="a3">a3
-<input class='d110' type="radio" name="highlight" data-price="95.9" value="a4">a4
+<input class='d110' type="radio" name="d110" data-price="25.1" value="a1">a1
+<input class='d110' type="radio" name="d110" data-price="55.4" value="a2">a2
+<input class='d110' type="radio" name="d110" data-price="65.3" value="a3">a3
+<input class='d110' type="radio" name="d110" data-price="95.9" value="a4">a4
 
 
 
 <br>
 
-<input class='d115' type="radio" name="highlight" data-price="25.1" value="a1">a1
-<input class='d115' type="radio" name="highlight" data-price="55.4" value="a2">a2
-<input class='d115' type="radio" name="highlight" data-price="65.3" value="a3">a3
-<input class='d115' type="radio" name="highlight" data-price="95.9" value="a4">a4
+<input class='d115' type="radio" name="d115" data-price="25.1" value="a1">a1
+<input class='d115' type="radio" name="d115" data-price="55.4" value="a2">a2
+<input class='d115' type="radio" name="d115" data-price="65.3" value="a3">a3
+<input class='d115' type="radio" name="d115" data-price="95.9" value="a4">a4
 
 <br>	
 <input id="priced110" type="text">
